# UCommon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_isnan.cpp
.augment/rules/: specify-rules.md
.codocs/: config.json  include.md  src.md
.codocs/docs/include/: UCommon.md  UCommon_ext.md
.codocs/docs/src/: Apps.md  Empty.md  Runtime.md  ext.md
.codocs/hooks/: commit-msg  pre-commit
.codocs/include/: UCommon.md
.codocs/scripts/: codocs.py
.codocs/src/: Runtime.md
.more-hooks/hooks/: pre-commit
.specify/: README.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: Config.cmake.in
docs/: SHRotate.md
include/UCommon/: Archive.h  BQ.h  Codec.h  Config.h  Cpp17.h  FP8.h  FP8.inl  Guid.h  Half.h  Matrix.h  Matrix.inl  SH.h  SH.inl  Tex2D.h  Tex2D.inl  TexCube.h  ThreadPool.h  UCommon.h  UCommonSH.h  UCommonSH.inl  UCommonThreadPool.h  UCommonUtils.h  Utils.h  Vector.h  Vector.h.backup
include/UCommon_ext/: .gitignore  ASTCUtils.h  Tex2DIO.h
scripts/: README.md
specs/001-shband-view/: data-model.md
specs/002-shband-vector/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-shband-view/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-shbandvector-view/: spec.md
src/Core/: CMakeLists.txt
src/Empty/: CMakeLists.txt
src/Runtime/: Archive.cpp  BQ.cpp  CMakeLists.txt  Codec.cpp  Guid.cpp  SH.cpp  Tex2D.cpp  TexCube.cpp  Utils.cpp
src/ThreadPool/: CMakeLists.txt  ThreadPool.cpp  UCommonThreadPool.cpp
(+129 files in other folders)
